<resources>
    <string name="app_name">CookBook</string>
    <string name="app_title">Cook Book</string>
    <string name="email" />
    <string name="password" />
    <string name="btn_login">Login</string>
    <!--<string name="lbl_forgot_password">Forgot password?</string>-->
    <string name="lbl_recover_password"><u>Forgot password?</u></string>
    <!--<string name="lbl_no_account">Don\'t have an account?</string>-->
    <string name="lbl_sign_up"><u>Don\'t have an account?</u></string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="txt_view_recover">Recover Password</string>
    <string name="hint_email_recover">type email</string>
    <string name="btn_recover_pwd">RECOVER PASSWORD</string>
    <string name="lbl_registration">Registration</string>
    <string name="txt_username_reg">username</string>
    <string name="hint_confirm_pwd_reg">confirm password</string>
    <string name="btn_register_new_user">REGISTER</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    <string name="lbl_agree_terms">I agree to the Cook Book</string>
    <string name="txt_terms"><u>Terms and Conditions</u></string>
    <string name="btn_browse_recipes">BROWSE RECIPES</string>
    <string name="btn_my_account">MY ACCOUNT</string>
    <string name="btn_shopping_list">SHOPPING LIST</string>
    <string name="btn_advertising">WATCH AD (1 point)</string>
    <string name="btn_browse_all_recipes">Browse all recipes</string>
    <string name="btn_my_saved_recipes">MY SAVED RECIPES</string>
    <string name="lbl_discover_recipes">Discover our amazing recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">View</string>
    <string name="backdrop_title">CookBook App</string>
    <string name="backdrop_subtitle">Worlds Best Recipee app</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="lbl_my_account">My Account</string>
    <string name="lbl_my_account_username">Username</string>
    <string name="lbl_my_account_email">Email</string>
    <string name="lbl_my_account_membership">Membership Type</string>
    <string name="btn_upg_premium">UPGRADE TO PREMIUM</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="lbl_info_recover_pwd">Enter your email address and we will send you an email with password recovery information</string>
    <string name="pwd_confirm_reg">confirm password</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="lbl_recipe_specs_title">DELETE THIS REPLACE WITH TITLE FROM DB</string>
    <string name="lbl_specs_category">REPLACE WITH CATEGORY FROM DB</string>
    <string name="lbl_general_instructions">General info</string>
    <string name="lbl_difficulty">getdifficultyFROMdbs:</string>
    <string name="lbl_preparation">getpreparationfromDBs:</string>
    <string name="lbl_cooking_time">getcookingtimefromDBS:</string>
    <string name="lbl_servings">getservingsfromDBS:</string>
    <string name="lbl_cost">getcostfromDBS:</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_upgrade">Upgrade</string>
    <string name="lbl_no_ads">No ads</string>
    <string name="lbl_access_all_recipes">Access to all recipes</string>
    <string name="lbl_monthly_vouchers">Monthly great vouchers</string>
    <string name="btn_upgrade_now">UPGRADE NOW FOR £1.99</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_difficulty_hard">Difficulty:</string>
    <string name="lbl_preparation_time_hard">Preparation time:</string>
    <string name="lbl_cooking_time_hard">Cooking time:</string>
    <string name="lbl_servings_hard">Servings:</string>
    <string name="lbl_cost_hard">Cost:</string>
    />
</resources>
